// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JapiTableHead adds links to unrendered value 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      <a
        href="http://example.com/matches/101"
      >
        101
      </a>
    </td>
    <td
      className={undefined}
    >
      <a
        href="http://example.com/games/201"
      >
        Game no 1
      </a>
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      <a
        href="http://example.com/matches/102"
      >
        102
      </a>
    </td>
    <td
      className={undefined}
    >
      <a
        href="http://example.com/games/202"
      >
        Game no 2
      </a>
    </td>
  </tr>
</tbody>
`;

exports[`JapiTableHead renders a table row for each data entry 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      1
    </td>
    <td
      className={undefined}
    />
  </tr>
  <tr>
    <td
      className={undefined}
    >
      2
    </td>
    <td
      className={undefined}
    />
  </tr>
</tbody>
`;

exports[`JapiTableHead renders an optional header cell className 1`] = `
<tbody>
  <tr>
    <td
      className="class1"
    >
      1
    </td>
    <td
      className="class2"
    />
  </tr>
  <tr>
    <td
      className="class1"
    >
      2
    </td>
    <td
      className="class2"
    />
  </tr>
</tbody>
`;

exports[`JapiTableHead renders appropriate cell values 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      101
    </td>
    <td
      className={undefined}
    >
      Title 1
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      102
    </td>
    <td
      className={undefined}
    >
      Title 2
    </td>
  </tr>
</tbody>
`;

exports[`JapiTableHead renders cell values of 1:1 relationships 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      101
    </td>
    <td
      className={undefined}
    >
      Game no 1
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      102
    </td>
    <td
      className={undefined}
    >
      Game no 2
    </td>
  </tr>
</tbody>
`;

exports[`JapiTableHead renders cell values with render function 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      101
    </td>
    <td
      className={undefined}
    >
      <time
        datetime="2017-04-10"
      >
        2017-04-10
      </time>
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      102
    </td>
    <td
      className={undefined}
    >
      <time
        datetime="2017-04-12"
      >
        2017-04-12
      </time>
    </td>
  </tr>
</tbody>
`;

exports[`JapiTableHead renders row values with render function 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      101
    </td>
    <td
      className={undefined}
    >
      <time
        datetime="2017-04-10"
      >
        some other value
      </time>
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      102
    </td>
    <td
      className={undefined}
    >
      <time
        datetime="2017-04-12"
      >
        another other value
      </time>
    </td>
  </tr>
</tbody>
`;
